[gd_scene load_steps=4 format=3 uid="uid://ovtrrfuldnvt"]

[ext_resource type="Theme" uid="uid://btbgf4k7cm5oh" path="res://theme.tres" id="1_57ifd"]
[ext_resource type="Script" uid="uid://g31pnesdb7m0" path="res://scripts/create_new_file.gd" id="1_btrrf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btrrf"]
bg_color = Color(0.121569, 0.121569, 0.121569, 0.960784)

[node name="CreateNewFile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btrrf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_btrrf")

[node name="Control" type="Control" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -124.0
offset_right = 130.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="PanelContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "新建文件"

[node name="System" type="Label" parent="PanelContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "新建一个新的UTF-8可编辑文本文件"

[node name="Content" type="Label" parent="PanelContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "以下是支持的文件类型"

[node name="1" type="CheckBox" parent="PanelContainer/Control/VBoxContainer"]
layout_mode = 2
text = "文本文档（.txt）"

[node name="2" type="CheckBox" parent="PanelContainer/Control/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "欧克脚本文件（.okpy）"

[node name="3" type="CheckBox" parent="PanelContainer/Control/VBoxContainer"]
layout_mode = 2
text = "欧克可视化窗口文件（.okqt）"

[node name="Create" type="Button" parent="PanelContainer/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_57ifd")
theme_override_font_sizes/font_size = 18
text = "新建"

[node name="Back" type="Button" parent="PanelContainer/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_57ifd")
theme_override_font_sizes/font_size = 18
text = "返回"

[node name="FileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
cancel_button_text = "取消"
file_mode = 0
access = 2
show_hidden_files = true
use_native_dialog = true

[connection signal="pressed" from="PanelContainer/Control/VBoxContainer/1" to="." method="_on_c1_pressed"]
[connection signal="pressed" from="PanelContainer/Control/VBoxContainer/2" to="." method="_on_c2_pressed"]
[connection signal="pressed" from="PanelContainer/Control/VBoxContainer/3" to="." method="_on_c3_pressed"]
[connection signal="pressed" from="PanelContainer/Control/VBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="PanelContainer/Control/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
